--- a/currency.css
+++ b/currency.css
@@ -1,11 +1,76 @@
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 90vh;
     background-image: url(/images/17454.jpg);
     background-position: 40px;
+    
 }
+
+
+  nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #0096C7;
+    color: white;
+    padding: 50px 800px;
+  }
+  nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+  }
+
+  #signUpForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
+
+  #signUpForm input[type="submit"] {
+    width: 100px;
+    height: 35px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    
+  }
+  
+
+#loginForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
+  #loginForm label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  #loginForm input[type="text"], #loginForm input[type="password"] {
+    width: 200px;
+    height: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0 10px;
+  }
+  #loginForm input[type="submit"] {
+    width: 100px;
+    height: 35px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  
 
 * {
     margin: 0;
